--- a/Gestalt_SVG/package.json
+++ b/Gestalt_SVG/package.json
@@ -15,6 +15,7 @@
     "d3": "^7.9.0",
     "lodash": "^4.17.21",
     "mdi": "^2.2.43",
+    "polygon-clipping": "^0.15.7",
     "sass": "^1.77.8",
     "sass-loader": "^16.0.1",
     "vue": "^3.4.29",
