--- a/Gestalt_SVG/package.json
+++ b/Gestalt_SVG/package.json
@@ -13,6 +13,7 @@
     "@mdi/js": "^7.4.47",
     "axios": "^1.7.4",
     "d3": "^7.9.0",
+    "element-plus": "^2.9.1",
     "lodash": "^4.17.21",
     "mdi": "^2.2.43",
     "polygon-clipping": "^0.15.7",
@@ -25,6 +26,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "unplugin-auto-import": "^0.19.0",
+    "unplugin-vue-components": "^0.28.0",
     "vite": "^5.3.1"
   }
 }
