--- a/Gestalt_SVG/package.json
+++ b/Gestalt_SVG/package.json
@@ -15,6 +15,7 @@
     "@mdi/js": "^7.4.47",
     "@svgdotjs/svg.js": "^3.2.4",
     "@types/plantuml-encoder": "^1.4.2",
+    "@types/three": "^0.171.0",
     "@types/viz.js": "^2.1.5",
     "@viz-js/viz": "^3.11.0",
     "axios": "^1.7.4",
@@ -34,6 +35,7 @@
     "sass": "^1.77.8",
     "sass-loader": "^16.0.1",
     "socket.io-client": "^4.8.1",
+    "three": "^0.172.0",
     "vega": "^5.30.0",
     "vega-embed": "^6.29.0",
     "vega-lite": "^5.23.0",
